--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -25,8 +25,7 @@
 <!-- <script type="text/javascript" src="app.js"></script> -->
 
 <!-- Internal CSS -->
-<!-- <link rel="stylesheet" href="../css/styles.css" /> -->
-<!-- <link rel="stylesheet" href="../css/lo.css" /> -->
+<link rel="stylesheet" href="../css/lo.css" />
 
 <!-- Favicon -->
 <link rel="icon" href="/images/favicon.ico" />
