--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -29,23 +29,17 @@
           >
             <h2><%= school.name %></h2></a
           >
-          <br />
-          <em class="indepthlistitemCategory"><%= school.type %></em>
-          <br />
-          <em class="indepthlistitemTrade"><%= school.programs %></em>
-          <br />
-          <em class="indepthlistitemCity"
-            ><%= school.location.city %>, <%= school.location.state %></em
-          >
-        </div>
+          <p class="indepthlistitemCategory"><%= school.type %></p>
+          <p class="indepthlistitemCity">
+            <%= school.location.city %>, <%= school.location.state %>
+          </p>
+        </section>
       </div>
-      <br />
-      <br />
       <hr />
-      <strong class="descriptionlabel"> Description</strong>
+      <h6 class="descriptionlabel">Description</h6>
       <p class="description"><%= school.description %></p>
       <hr />
-      <strong class="tradesofferedlabel">Programs</strong>
+      <h6 class="tradesofferedlabel">Programs</h6>
       <p class="tradesoffered"><%= school.programs %></p>
       <hr />
       <%- include('./point-of-contact', {school: school}); %>
