--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -13,11 +13,22 @@
   --color-b: #134074;
   --color-c: #a05482;
 
-  font-family: Arial, Helvetica, sans-serif;
+  --lo-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: var(--lo-font-sans-serif);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  -webkit-text-size-adjust: 100%;
 }
 
 body.lo-body {
@@ -26,7 +37,6 @@ body.lo-body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  /* min-height: 100vh; */
   min-height: auto;
   background-color: var(--bg-secondary-color);
   padding: 0;
@@ -467,13 +477,18 @@ button.nav-btn.fa-sign-in {
 
 /* ------------------------------ RESOURCES CAROUSEL ------------------------------ */
 
-.lo-body .lo-container.lo-carousel-wrapper {
+.lo-body .lo-container.lo-container-carousel {
   max-width: fit-content;
   max-width: 900px;
+  width: 900px;
 }
 
-.carousel_image {
-  max-width: 100px;
+.carousel__image {
+  max-width: 300px;
+}
+
+.lo-container-carousel .carouselheader {
+  margin: auto;
 }
 
 /* ------------------------------ INDEX & FAVORITE LIST ------------------------------ */
