--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom">
+<footer>
   <div class="footercontainer">
     <a target="_blank" href=""
       ><i class="footericon fa-brands fa-instagram"></i
