--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,5 +1,5 @@
-<div class="lo-carousel-wrapper lo-container">
-  <h3 class="carouselheader">Case Studies</h3>
+<div class="lo-container lo-container-carousel">
+  <h3 class="carouselheader">Testimonials</h3>
   <div class="carousel">
     <button class="carousel__button carousel__button--left is-hidden">
       <img class="arrowimage" src="/images/carousel/leftarrow.png" alt="" />
